--- a/sass/_bootstrap-breakpoints.scss
+++ b/sass/_bootstrap-breakpoints.scss
@@ -1,4 +1,4 @@
-// Component: parts/BootstrapBreakPoints
+S// Component: parts/BootstrapBreakPoints
 .bootstrap-breakpoints {
   position: fixed;
   right: 0;
